--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build && electron-builder",
+    "build-skip-tsc": "vite build && electron-builder",
     "preview": "vite preview"
   },
   "keywords": [
@@ -16,6 +17,10 @@
   ],
   "author": "VidFetch Team",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Turing-Cat/VidFetch.git"
+  },
   "devDependencies": {
     "@types/node": "^18.0.0",
     "@vitejs/plugin-vue": "^5.0.0",
@@ -37,6 +42,13 @@
     "yt-dlp-exec": "^1.0.0"
   },
   "build": {
+    "publish": [
+      {
+        "provider": "github",
+        "owner": "Turing-Cat",
+        "repo": "VidFetch"
+      }
+    ],
     "appId": "com.vidfetch.app",
     "productName": "VidFetch",
     "directories": {
@@ -48,7 +60,7 @@
     ],
     "extraResources": [
       {
-        "from": "node_modules/yt-dlp-exec/bin",
+        "from": "local_bin",
         "to": "bin",
         "filter": [
           "yt-dlp",
