Set release draft to false in build workflow
Added 'draft: false' to the release step in the GitHub Actions build workflow to ensure releases are published as non-draft by default.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -67,6 +67,7 @@ jobs:
           # If the commit is tagged with a version (e.g. "v1.0.0"),
           # release the app after building
           release: ${{ startsWith(github.ref, 'refs/tags/v') }}
+          draft: false
           
           # Skip vue-tsc check as it was causing issues locally
           build_script_name: build-skip-tsc
